--- a/15. ejs-challenge/views/home.ejs
+++ b/15. ejs-challenge/views/home.ejs
@@ -7,7 +7,8 @@
     <%for(let i =0;i < posts.length; i++) {%>
         <h3><%= posts[i].title %></h3>
         <p><%= posts[i].content.substring(0,150) + "..."%>
-            <a href="/posts/<%=posts[i].title%>">Read More</a> 
+            <a href="/posts/<%=posts[i].title%>">Read More</a>
+            <!-- <a href="/posts/<%=posts[i]._id%>">Read More</a> //sending id -->
         </p>
     <%}%>
     
